--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,4 +1,4 @@
-footer {
+.footer {
 
     background-color: rgb(53, 53, 53, 1);
 
@@ -27,5 +27,22 @@ footer {
 
         }
     }
-
 }
+@media only screen and (min-width: 1024px) {
+    
+        .footer {
+            display: flex;
+            flex-direction: row-reverse;
+            align-items: baseline;
+            .footer__part {
+                margin:30px;
+            }
+            .footer__txt {
+                display: flex;
+                flex-direction: row;    
+                color:white;
+            }
+        }
+}
+        
+       
