--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -1,5 +1,6 @@
 /***************restaurant*************/ 
 .restaurants {
+    
    @include flex-center-columun;
     gap: 20px;
     padding-top: 35px;
@@ -20,6 +21,10 @@
                 border-radius: 15px;
                 padding-bottom: 10px;
                 position: relative;
+                a {
+                    width: 100%;
+                    height: 100%;
+                }
 
                 .card__image {
                     height: 200px;
@@ -53,7 +58,8 @@
                     padding-left: 5px;
                 
                     :root {
-                        --heart-fill-color: rgba(147, 86, 220, 1);
+                        --heart-fill-color: linear-gradient(to left, rgba(147, 86, 220, 1), rgba(255, 121, 218, 1));
+                        ;
                         
                       }
 
@@ -79,36 +85,24 @@
                         height: 1px;
                         margin: -1px;
                         padding: 0;
-                        overflow: hidden;/*??????*/
-                        clip: rect(0, 0, 0, 0);/*??????*/
+                        overflow: hidden;/*masque tout contenu qui déborde des limites de son conteneur parent.*/
+                        clip: rect(0, 0, 0, 0);/*masquer le contenu*/
                         border: 0;
                     }
 
-                    #heart-checkbox-1:checked + .heart-icon {
-                        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z" fill="rgba(147, 86, 220, 1)"/></svg>');
+                    input:checked + .heart-icon {
+                        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z" fill="rgba(147, 86, 220, 1)"/></svg>');
                     }
                     
-                    #heart-checkbox-2:checked + .heart-icon {
-                        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z" fill="rgba(147, 86, 220, 1)"/></svg>');
-                    }
-
-                    #heart-checkbox-3:checked + .heart-icon {
-                        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z" fill="rgba(147, 86, 220, 1)"/></svg>');
-                    }
-
-                    
-                    #heart-checkbox-4:checked + .heart-icon {
-                        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M16.5 3c-1.74 0-3.41.81-4.5 2.09C10.91 3.81 9.24 3 7.5 3 4.42 3 2 5.42 2 8.5c0 3.78 3.4 6.86 8.55 11.54L12 21.35l1.45-1.32C18.6 15.36 22 12.28 22 8.5 22 5.42 19.58 3 16.5 3zm-4.4 15.55l-.1.1-.1-.1C7.14 14.24 4 11.39 4 8.5 4 6.5 5.5 5 7.5 5c1.54 0 3.04.99 3.57 2.36h1.87C13.46 5.99 14.96 5 16.5 5c2 0 3.5 1.5 3.5 3.5 0 2.89-3.14 5.74-7.9 10.05z" fill="rgba(147, 86, 220, 1)"/></svg>');
-                    }
 
                     
                 }
                       
                
-            } }
+            }
     }
 
-
+}
 @media only screen and (min-width: 1024px) {
     
 
