--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -367,9 +367,6 @@ body .functionality .functionality__links .functionality__links--card .fa-store 
   height: 16px;
 }
 
-.restaurant__image {
-  position: relative;
-}
 .restaurant__image .palette {
   width: 375px;
   height: 275px;
@@ -381,7 +378,12 @@ body .functionality .functionality__links .functionality__links--card .fa-store 
   }
 }
 
-.restaurant {
+.main-container {
+  position: relative;
+}
+.main-container .restaurant {
+  position: absolute;
+  margin-top: -50px;
   display: flex;
   flex-direction: column;
   gap: 40px;
@@ -392,37 +394,36 @@ body .functionality .functionality__links .functionality__links--card .fa-store 
   top: 25%;*/
 }
 @media only screen and (min-width: 1024px) {
-  .restaurant {
-    margin-left: 193px;
-    margin-right: 193px;
+  .main-container .restaurant {
+    margin-left: 383px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
 }
-.restaurant .restaurants__description {
+.main-container .restaurant .restaurants__description {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   /* CSS pour cacher l'élément input */
 }
 @media only screen and (min-width: 1024px) {
-  .restaurant .restaurants__description {
+  .main-container .restaurant .restaurants__description {
     gap: 20px;
   }
 }
-.restaurant .restaurants__description .restaurants__description--title {
+.main-container .restaurant .restaurants__description .restaurants__description--title {
   font-family: "shrikhand";
   font-style: italic;
   font-size: 28px;
 }
-.restaurant .restaurants__description .restaurants__description--icone {
+.main-container .restaurant .restaurants__description .restaurants__description--icone {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-.restaurant .restaurants__description .heart-icon {
+.main-container .restaurant .restaurants__description .heart-icon {
   display: inline-block;
   width: 24px;
   height: 24px;
@@ -430,7 +431,7 @@ body .functionality .functionality__links .functionality__links--card .fa-store 
   background-size: cover;
   cursor: pointer;
 }
-.restaurant .restaurants__description .visually-hidden {
+.main-container .restaurant .restaurants__description .visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -440,20 +441,20 @@ body .functionality .functionality__links .functionality__links--card .fa-store 
   clip: rect(0, 0, 0, 0); /*masquer le contenu*/
   border: 0;
 }
-.restaurant .restaurants__description input:checked + .heart-icon {
+.main-container .restaurant .restaurants__description input:checked + .heart-icon {
   background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M47.6 300.4L228.3 469.1c7.5 7 17.4 10.9 27.7 10.9s20.2-3.9 27.7-10.9L464.4 300.4c30.4-28.3 47.6-68 47.6-109.5v-5.8c0-69.9-50.5-129.5-119.4-141C347 36.5 300.6 51.4 268 84L256 96 244 84c-32.6-32.6-79-47.5-124.6-39.9C50.5 55.6 0 115.2 0 185.1v5.8c0 41.5 17.2 81.2 47.6 109.5z" fill="rgba(147, 86, 220, 1)"/></svg>');
 }
-.restaurant .restaurant__menu .menu__entry {
+.main-container .restaurant .restaurant__menu .menu__entry, .main-container .restaurant .restaurant__menu .menu__flat, .main-container .restaurant .restaurant__menu .menu__dessert {
   display: flex;
   flex-direction: column;
   gap: 12px;
 }
-.restaurant .restaurant__menu .menu__entry .menu__title {
+.main-container .restaurant .restaurant__menu .menu__entry .menu__title, .main-container .restaurant .restaurant__menu .menu__flat .menu__title, .main-container .restaurant .restaurant__menu .menu__dessert .menu__title {
   font-size: 16px;
   color: rgb(0, 0, 0);
   position: relative; /* Position relative pour faciliter le positionnement de la sous-ligne */
 }
-.restaurant .restaurant__menu .menu__entry .menu__title::before {
+.main-container .restaurant .restaurant__menu .menu__entry .menu__title::before, .main-container .restaurant .restaurant__menu .menu__flat .menu__title::before, .main-container .restaurant .restaurant__menu .menu__dessert .menu__title::before {
   content: ""; /* Ajoute un contenu vide */
   position: absolute; /* Position absolue par rapport à l'élément parent */
   bottom: -5px; /* Distance de la sous-ligne par rapport au bas de l'élément li */
@@ -464,29 +465,57 @@ body .functionality .functionality__links .functionality__links--card .fa-store 
   width: 40px;
   background-color: rgb(153, 226, 208);
 }
-.restaurant .restaurant__menu .menu__choice {
+.main-container .restaurant .restaurant__menu .menu__choice {
   background-color: white;
   border-radius: 15px;
   box-shadow: 0 4px 15px 0;
   width: 349px;
-  padding: 10px;
 }
 @media only screen and (min-width: 1024px) {
-  .restaurant .restaurant__menu .menu__choice {
+  .main-container .restaurant .restaurant__menu .menu__choice {
     width: 634px;
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
   }
 }
-.restaurant .restaurant__menu .menu__choice .menu__choice--description {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+.main-container .restaurant .restaurant__menu .menu__choice .menu__choice--content {
+  flex-grow: 1;
+  margin: 10px; /* Espacement entre le contenu et l'élément cachet */
 }
-.restaurant .order {
+.main-container .restaurant .restaurant__menu .menu__choice .element__cachet {
+  position: relative;
+  width: 59px;
+  height: 69px;
+  /*overflow: hidden;*/
+  transition: transform 0.5s ease-in-out;
+}
+.main-container .restaurant .restaurant__menu .menu__choice .element__cachet .checkbox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 59px;
+  height: 69px;
+  background-color: rgb(153, 226, 208);
+  border-radius: 0 15px 15px 0;
+  right: -59px;
+  position: absolute;
+  top: 0;
+  transition: transform 0.5s ease-in-out;
+}
+.main-container .restaurant .restaurant__menu .menu__choice .element__cachet .checkbox .fa-circle-check {
+  color: white;
+}
+.main-container .restaurant .restaurant__menu .menu__choice .element__cachet:hover {
+  transform: translateX(-69px);
+}
+.main-container .restaurant .order {
   display: flex;
   justify-content: center;
   margin: 30px;
 }
-.restaurant .order .order__button {
+.main-container .restaurant .order .order__button {
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -499,6 +528,11 @@ body .functionality .functionality__links .functionality__links--card .fa-store 
   cursor: pointer;
   transition: background-color 0.5s;
   font-size: 16px;
+}
+.main-container .footer {
+  position: absolute;
+  width: 100%;
+  top: 1550px;
 }
 
 /*# sourceMappingURL=style.css.map */
