--- a/sass/_restaurants.scss
+++ b/sass/_restaurants.scss
@@ -16,18 +16,21 @@
 }
 
 .restaurant__image {
+  @media only screen and (min-width: 768px) and (max-width: 1023px) {
 
-.palette {
-  width: 375px;
-  height: 275px;
+  .palette {
+    width: 375px;
+    height: 275px;
+}
+  }
   @media only screen and (min-width: 1024px) {
+   .palette { 
     width:100%;
     height: 383px;
   }
 }
-
 }
-.main-container { 
+.main-container {
   position: relative;
 .restaurant {
     position: absolute;
@@ -38,8 +41,7 @@
     background-color: rgba(246, 246, 246, 1);
     border-radius: 40px 40px 0px 0px;
     padding: 20px;
-    /*position: absolute;
-    top: 25%;*/
+   
     @media only screen and (min-width: 1024px) {
          margin-left: 383px;
           display: flex;
@@ -119,7 +121,7 @@
         }
         
         
-        }
+        
 
       .menu__choice {
         background-color: white;
@@ -130,52 +132,38 @@
           width: 634px;
           display: flex;
           flex-direction: row;
-          align-items: flex-start;
-          justify-content: space-between;
-      
-        }
-       
-        
-        .menu__choice--content {
-          flex-grow: 1;
-          margin: 10px; /* Espacement entre le contenu et l'élément cachet */
-      }
-      
-    
-           .element__cachet {
-                position: relative;
-                width: 59px;
-                height: 69px;
-                /*overflow: hidden;*/
-                transition: transform 0.5s ease-in-out;
-               
-
-
-             
-              .checkbox {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                width: 59px;
-                height: 69px;
-                background-color: rgb(153, 226, 208);
-                border-radius: 0 15px 15px 0;
-                right: -59px;
-                position: absolute;
-                top: 0;
-                transition: transform 0.5s ease-in-out;
-                .fa-circle-check {
-                  color:white;
+          overflow: hidden;
+                .menu__choice--content {
+                  flex: 1;
+                  margin: 10px; 
                 }
-                            
-              }             
+                
+                .price {
+                  font-weight: 700;
+                  display: flex;
+                  align-items: flex-end;
+                  justify-content: flex-end;
+                  margin: 10px;
+                }
+                .checkbox {
+                  display: flex;
+                  justify-content: center;
+                  align-items: center;
+                  width: 59px;
+                  height: 69px;
+                  background-color: rgb(153, 226, 208);
+                  border-radius: 0 15px 15px 0;
+                  transition-duration: 0.5s;
+                  margin-right:  -3.7rem;
+                  .fa-circle-check {
+                    color:white;
+                  }         
+                }  
+                &:hover .checkbox {
+                  margin-right: 0;           
+                }
           }
-          .element__cachet:hover {
-            transform: translateX(-69px);
-          }   
-          
-        }
-      }
+      
     
     .order {
       display: flex;
@@ -196,15 +184,19 @@
         font-size: 16px;
       }
     }
+    }
   }
+}
+}
+
   .footer {
     position: absolute;
   width: 100%;
   top: 1550px;
   }
+
+
+
 }
-
-
-
 
 
